// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavComponent should assign href with default target and relation if only href is provided in VM 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-nav>
    <nav
      class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
    >
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <button>
        Button
      </button>
    </nav>
  </app-nav>
</div>
`;

exports[`NavComponent should assign href with target and relation if provided in VM 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-nav>
    <nav
      class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
    >
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <button>
        Button
      </button>
    </nav>
  </app-nav>
</div>
`;

exports[`NavComponent should assign routerLink if provided in VM 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-nav>
    <nav
      class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
    >
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <button>
        Button
      </button>
    </nav>
  </app-nav>
</div>
`;

exports[`NavComponent should project the provided content 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <app-nav>
    <nav
      class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
    >
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <app-nav-item>
        <a
          class="nav-item"
          href=""
          rel="null"
          target="null"
        />
      </app-nav-item>
      <button>
        Button
      </button>
    </nav>
  </app-nav>
</div>
`;
